SDKs/twilio.com/twilio_trusthub_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateCustomerProfileRequest req = new CreateCustomerProfileRequest() {{
                security = new CreateCustomerProfileSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateCustomerProfileCreateCustomerProfileRequest() {{
                    email = "sit";
                    friendlyName = "voluptas";
                    policySid = "culpa";
                    statusCallback = "expedita";
                }};
            }};

            CreateCustomerProfileResponse res = sdk.createCustomerProfile(req);

            if (res.trusthubV1CustomerProfile.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createCustomerProfile` - Create a new Customer-Profile.
* `createCustomerProfileChannelEndpointAssignment` - Create a new Assigned Item.
* `createCustomerProfileEntityAssignment` - Create a new Assigned Item.
* `createCustomerProfileEvaluation` - Create a new Evaluation
* `createEndUser` - Create a new End User.
* `createSupportingDocument` - Create a new Supporting Document.
* `createTrustProduct` - Create a new Customer-Profile.
* `createTrustProductChannelEndpointAssignment` - Create a new Assigned Item.
* `createTrustProductEntityAssignment` - Create a new Assigned Item.
* `createTrustProductEvaluation` - Create a new Evaluation
* `deleteCustomerProfile` - Delete a specific Customer-Profile.
* `deleteCustomerProfileChannelEndpointAssignment` - Remove an Assignment Item Instance.
* `deleteCustomerProfileEntityAssignment` - Remove an Assignment Item Instance.
* `deleteEndUser` - Delete a specific End User.
* `deleteSupportingDocument` - Delete a specific Supporting Document.
* `deleteTrustProduct` - Delete a specific Customer-Profile.
* `deleteTrustProductChannelEndpointAssignment` - Remove an Assignment Item Instance.
* `deleteTrustProductEntityAssignment` - Remove an Assignment Item Instance.
* `fetchCustomerProfile` - Fetch a specific Customer-Profile instance.
* `fetchCustomerProfileChannelEndpointAssignment` - Fetch specific Assigned Item Instance.
* `fetchCustomerProfileEntityAssignment` - Fetch specific Assigned Item Instance.
* `fetchCustomerProfileEvaluation` - Fetch specific Evaluation Instance.
* `fetchEndUser` - Fetch specific End User Instance.
* `fetchEndUserType` - Fetch a specific End-User Type Instance.
* `fetchPolicies` - Fetch specific Policy Instance.
* `fetchSupportingDocument` - Fetch specific Supporting Document Instance.
* `fetchSupportingDocumentType` - Fetch a specific Supporting Document Type Instance.
* `fetchTrustProduct` - Fetch a specific Customer-Profile instance.
* `fetchTrustProductChannelEndpointAssignment` - Fetch specific Assigned Item Instance.
* `fetchTrustProductEntityAssignment` - Fetch specific Assigned Item Instance.
* `fetchTrustProductEvaluation` - Fetch specific Evaluation Instance.
* `listCustomerProfile` - Retrieve a list of all Customer-Profiles for an account.
* `listCustomerProfileChannelEndpointAssignment` - Retrieve a list of all Assigned Items for an account.
* `listCustomerProfileEntityAssignment` - Retrieve a list of all Assigned Items for an account.
* `listCustomerProfileEvaluation` - Retrieve a list of Evaluations associated to the customer_profile resource.
* `listEndUser` - Retrieve a list of all End User for an account.
* `listEndUserType` - Retrieve a list of all End-User Types.
* `listPolicies` - Retrieve a list of all Policys.
* `listSupportingDocument` - Retrieve a list of all Supporting Document for an account.
* `listSupportingDocumentType` - Retrieve a list of all Supporting Document Types.
* `listTrustProduct` - Retrieve a list of all Customer-Profiles for an account.
* `listTrustProductChannelEndpointAssignment` - Retrieve a list of all Assigned Items for an account.
* `listTrustProductEntityAssignment` - Retrieve a list of all Assigned Items for an account.
* `listTrustProductEvaluation` - Retrieve a list of Evaluations associated to the trust_product resource.
* `updateCustomerProfile` - Updates a Customer-Profile in an account.
* `updateEndUser` - Update an existing End User.
* `updateSupportingDocument` - Update an existing Supporting Document.
* `updateTrustProduct` - Updates a Customer-Profile in an account.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
